# clawdcut

./: .gitignore  AGENTS.md  README.md  pyproject.toml  test_timing.csv
clawdcut/: __init__.py  main.py  test_pixabay_api.py
clawdcut/aesthetics/: __init__.py  scorer.py  types.py
clawdcut/agents/: __init__.py  asset_manager.py  director.py  prompt_fragments.py  remotion_developer.py  renderer.py
clawdcut/skills/asset-acquisition/: SKILL.md
clawdcut/skills/creative-scripting/: SKILL.md
clawdcut/skills/remotion-developer/: SKILL.md
clawdcut/skills/storyboard-design/: SKILL.md
clawdcut/skills/video-aesthetics/: SKILL.md
clawdcut/skills/video-understanding/: SKILL.md
clawdcut/tools/: __init__.py  stock_tools.py
docs/plans/: 2025-02-20-remotion-video-generation-design.md  2026-03-03-deepagents-upgrade-assessment.md
remotion/: .gitignore  QUICKSTART.md  README.md  STATUS.md  package-lock.json  package.json  setup.bat  setup.sh  tsconfig.json  verify.sh
remotion/public/: .gitkeep  assets
remotion/src/: CloudflareVideo.tsx  Root.tsx
remotion/src/components/: Scene1.tsx  Scene2.tsx  Scene3.tsx  Scene4.tsx  Scene5.tsx  Shot16Multi.tsx  Shot20SplitScreen.tsx  Shot24Multi.tsx  ShotComponent.tsx
remotion/src/config/: shots.ts
tests/: test_main.py
tests/aesthetics/: test_scorer.py  test_types.py
tests/agents/: test_asset_manager.py  test_director.py  test_prompt_fragments.py  test_remotion_developer.py
tests/skills/video_aesthetics/: test_scripts.py  test_skill_contract.py
tests/tools/: test_stock_tools.py
(+7 files in other folders)
